--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ coverage/
 public/dist/
 uploads
 modules/users/client/img/profile/uploads
+modules/testes/client/images
 config/env/local.js
 config/env/local-*.js
 *.pem
