--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "ng-file-upload": "~12.1.0",
     "owasp-password-strength-test": "~1.3.0",
     "jquery": "^3.3.1",
-    "jquery-ui": "^1.12.1"
+    "jquery-ui": "^1.12.1",
+    "chart.js": "^2.7.2"
   },
   "overrides": {
     "bootstrap": {
